Proof check 3 change in faq and minor change

--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -289,6 +289,10 @@
         line-height: 40px;
         font-size: 29px;
     }
+    .faq-l::before{
+        content: "\276F";
+        left: 110%;
+      }
 
 }
 
