--- a/css/style.css
+++ b/css/style.css
@@ -1641,7 +1641,7 @@ p.main-ab4-p {
 .ab-4s-1 span{
   /* font-weight: 500; */
   letter-spacing: 0em;
-  font-family: 'Sarala', sans-serif;
+  font-family: 'Merriweather', serif;
   font-size: 36px;
   line-height: 64px;
 }
@@ -1674,7 +1674,7 @@ i#fc-list {
 h2.ab-th1 {
   font-size: 36px;
   margin-bottom: 28px;
-  font-family: 'Sarala', sans-serif;
+  font-family: 'Merriweather', serif;
   font-weight: bold;
 }
 
@@ -1711,7 +1711,7 @@ h2.ab-4s-1 {
   font-weight: 600;
   letter-spacing: -0.01em;
   margin-bottom: 20px;
-  font-family: 'Sarala', sans-serif;
+  font-family:  'Merriweather', serif;
 }
 .cus-p {
   padding: 17% 10% 10% 10% !important;
@@ -1967,7 +1967,7 @@ h1.faq-accordion-h1{
   -webkit-transition: all 0.3s;
   transition: all 0.3s;
   position: absolute;
-  left: 110%;
+  left: 90%;
 }
 .faq-input:checked ~ h1 .faq-l::before{
   content: "\276F";
@@ -2022,7 +2022,7 @@ h2.sh-cont-h2 {
   font-style: normal;
   font-size: 36px;
   letter-spacing: .04em;
-  font-family: 'Sarala', sans-serif;
+  font-family: 'Merriweather', serif;
   line-height: 1em;
   text-transform: none;
 }
@@ -2044,6 +2044,7 @@ h3.ss-c-h3 {
   font-size: 36px;
   font-weight: bold;
   font-style: normal;
+  font-family: 'Merriweather', serif;
 }
 
 p.ss-c--p {
