--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Merriweather&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Sarala&display=swap');
 
+
 body,
 html {
   font-family: "Lato", sans-serif;
@@ -12,7 +13,7 @@ html {
   color: #333;
   line-height: 25px;
   width: 100%;
-  height: 100%;
+  height: 100vh;
   transition: all 0.5s;
   overflow-x: hidden;
 }
@@ -40,14 +41,8 @@ h2,
 h3,
 h4,
 h5,
-h6,
-.h1,
-.h2,
-.h3,
-.h4,
-.h5,
-.h6 {
-  font-family: "Roboto", sans-serif;
+h6 {
+  /* font-family: "Roboto", sans-serif; */
   line-height: 1.1;
   font-weight: 500;
   color: #222222;
@@ -359,6 +354,7 @@ button[type=submit] {
   font-weight: 600;
   font-size: 13px;
 }
+
 
 /* modal pop up form css end  */
 
@@ -1130,8 +1126,11 @@ a.cta-a {
 
 .image-about-wrapper.float_left {
   padding-bottom: 100px;
+  padding-top: 100px;
 }
-
+.emergency2-main-wrapper {
+  margin-bottom: 6%;
+}
 /*---------
 TREATMENT section
 -----------*/
@@ -2108,7 +2107,7 @@ p.ds-a {
   font-weight: 600;
 } */
 .gallery-sec {
-  padding: 173% 0% 0% 0%;
+  padding: 0%;
 }
 
 .gallery-image {
