--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -397,3 +397,36 @@
         width: 100px;
     }
 }
+
+@media (min-width: 768px) and (max-width: 991.98px) {
+    /* CSS styles for medium devices go here */
+    .gallery-sec {
+        padding: 0;
+      }
+    
+      .gallery-image {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+      }
+    
+      .img-box {
+        box-sizing: content-box;
+        margin: 10px;
+        width: calc(49% - 20px); /* Adjust the width as needed for 2:2:1 layout */
+        height: 262.5px; /* Aspect ratio for iPad Air (4:3) */
+        overflow: hidden;
+        display: inline-block;
+        color: white;
+        position: relative;
+        background-color: white;
+      }
+    
+      .img-box img {
+        width: 100%;
+        height: 100%;
+        object-fit: cover; /* Maintain aspect ratio and cover container */
+        transform: scale(1.0);
+        transition: transform 0.4s ease;
+      }
+  }
