--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -99,7 +99,7 @@
 
     /* about us page css  */
     h4.sb-sub-h4.wow.fadeIn {
-        font-size: 27px !important;
+        font-size: 25px !important;
         line-height: 39px;
     }
     h2.sb-sub-h2.wow.fadeIn {
@@ -295,7 +295,27 @@
     .faq-l::before{
         content: "\276F";
         left: 110%;
-      }
+    }
+    .row.align-items-center.asdrp-r {
+        display: flex;
+        flex-direction: column-reverse;
+    }
+    .row.align-items-center.asdrj-r {
+        display: flex;
+        flex-direction: column-reverse;
+    }
+    p.asdrp-p.mb-0 {
+        font-family: 'Sarala', sans-serif;
+        padding-right: 0px;
+        text-align: center !important;
+    }
+    .section-title.ml-lg-5 {
+        text-align: center;
+        padding-top: 22px;
+    }
+    .asdrp-1 {
+        margin: 175% 0% 0% 0%;
+    }
 
 }
 
@@ -422,11 +442,16 @@
         background-color: white;
       }
     
-      .img-box img {
+    .img-box img {
         width: 100%;
         height: 100%;
         object-fit: cover; /* Maintain aspect ratio and cover container */
         transform: scale(1.0);
-        transition: transform 0.4s ease;
-      }
-  }
+        transition: transform 0.4s ease
+    }
+    .row.align-items-center.asdrj-r {
+        display: flex;
+        flex-direction: column-reverse;
+        align-items: baseline !important; 
+    }
+}
